--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spotgo",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
+    "ansi-escapes": "^7.2.0",
+    "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-constants": "~18.0.12",
+    "expo-font": "~14.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.7.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-async-hook": "^4.0.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-country-codes-picker": "^2.3.5",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
