--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ansi-escapes": "^7.2.0",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
     "expo-linear-gradient": "~15.0.8",
@@ -26,12 +27,11 @@
     "react-async-hook": "^4.0.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-country-codes-picker": "^2.3.5",
-    "react-native-country-picker-modal": "^2.0.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
